<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editTextDate_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/whatReminderDateWithout"
        android:inputType="date" />

    <EditText
        android:id="@+id/editTextTime_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/whatReminderTimeWithout"
        android:inputType="time" />

    <EditText
        android:id="@+id/editTextContent_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/whatReminderContentWithout" />

    <Button
        android:id="@+id/buttonSubmit_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ok" />

</LinearLayout>