<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertYourName"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextUsername_forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insertYourName"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertLastName"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextUserLastName_forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insertLastName"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertPhoneNumber"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextPhoneNumber_forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insertPhoneNumber"
        android:inputType="phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertNewPassword"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextPassword_forgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insertNewPassword"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwordLength6Char"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/darker_gray"/>

    <Button
        android:id="@+id/buttonRegister_forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPassword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>


</LinearLayout>