<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertYourName"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextUsername_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertYourName"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertYourPassword"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextPassword_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertYourPassword"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordLength6Char"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insertPhoneNumber"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/editTextPhoneNumber_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insertPhoneNumber"
            android:inputType="phone"/>

        <Button
            android:id="@+id/buttonRegister_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
